--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   <meta name="description" content="&#x3D;咸鱼鱼。">
 <meta property="og:type" content="website">
 <meta property="og:title" content="鱼鱼宇宙 -現在心行形-">
-<meta property="og:url" content="http://example.com/index.html">
+<meta property="og:url" content="https://charxy.github.io/index.html">
 <meta property="og:site_name" content="鱼鱼宇宙 -現在心行形-">
 <meta property="og:description" content="&#x3D;咸鱼鱼。">
 <meta property="og:locale" content="zh_CN">
@@ -248,7 +248,7 @@
   
           </div>
           <div class="wordcount need-seperator meta-info">
-            22k 词 
+            21k 词 
           </div>
         </div>
         
